cleaned main.c file and started to reorganise parsing (the goal is to use / have a proper Lexer Parser

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -28,6 +28,7 @@ SRCS =			ft_advance_for_quotes.c \
       			ft_isascii.c \
       			ft_isdigit.c \
       			ft_isprint.c \
+				ft_isnumber.c \
       			ft_itoa.c \
       			ft_joinfree_heapstr_stackstr.c \
       			ft_joinfree_stackstr_heapstr.c \
